// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrentRefinedValues renders markup with state 1`] = `
<ng-ais-current-refinements
  attributes={[Function Array]}
  clearAll={[Function String]}
  clearAllLabel={[Function String]}
  clearsQuery="false"
  cx={[Function Function]}
  onlyListedAttributes="false"
  searchInstance={[Function NgAisInstance]}
  state={[Function Object]}
  updateState={[Function Function]}
>
  
      <div
    class="ais-CurrentRefinedValues"
  >
    
        
    <ng-ais-header
      ng-reflect-class-name="ais-CurrentRefinedValues-heade"
    >
      
      
      
      
    
    </ng-ais-header>
    
  
        
    <div
      class="ais-CurrentRefinedValues-body ais-body"
    >
      
          
      
      <button
        class="ais-CurrentRefinedValues-reset"
      >
        
            Clear all
          
      </button>
      
  
          
      <ul
        class="ais-CurrentRefinedValues-list"
      >
        
            
        
        <li
          class="ais-CurrentRefinedValues-item"
        >
          
              
          <button
            class="ais-CurrentRefinedValues-button"
          >
            
                Canon
                
            <span
              class="ais-CurrentRefinedValues-count"
            >
              27
            </span>
            
              
          </button>
          
            
        </li>
        <li
          class="ais-CurrentRefinedValues-item"
        >
          
              
          <button
            class="ais-CurrentRefinedValues-button"
          >
            
                Sony
                
            <span
              class="ais-CurrentRefinedValues-count"
            >
              28
            </span>
            
              
          </button>
          
            
        </li>
        <li
          class="ais-CurrentRefinedValues-item"
        >
          
              
          <button
            class="ais-CurrentRefinedValues-button"
          >
            
                Cameras & Camcorders
                
            <span
              class="ais-CurrentRefinedValues-count"
            >
              55
            </span>
            
              
          </button>
          
            
        </li>
        <li
          class="ais-CurrentRefinedValues-item"
        >
          
              
          <button
            class="ais-CurrentRefinedValues-button"
          >
            
                ≥ 0
                
            <span
              class="ais-CurrentRefinedValues-count"
            >
              
            </span>
            
              
          </button>
          
            
        </li>
        
          
      </ul>
      
  
          
      
      
        
    </div>
    
  
        
    <ng-ais-footer
      ng-reflect-class-name="ais-CurrentRefinedValues-foote"
    >
      
      
      
      
    
    </ng-ais-footer>
    
      
  </div>
    
</ng-ais-current-refinements>
`;

exports[`CurrentRefinedValues renders markup without state 1`] = `
<ng-ais-current-refinements
  attributes={[Function Array]}
  clearAll={[Function String]}
  clearAllLabel={[Function String]}
  clearsQuery="false"
  cx={[Function Function]}
  onlyListedAttributes="false"
  searchInstance={[Function NgAisInstance]}
  state={[Function Object]}
  updateState={[Function Function]}
>
  
      <div
    class="ais-CurrentRefinedValues"
  >
    
        
    <ng-ais-header
      ng-reflect-class-name="ais-CurrentRefinedValues-heade"
    >
      
      
      
      
    
    </ng-ais-header>
    
  
        
    <div
      class="ais-CurrentRefinedValues-body ais-body"
    >
      
          
      
      <button
        class="ais-CurrentRefinedValues-reset"
      >
        
            Clear all
          
      </button>
      
  
          
      <ul
        class="ais-CurrentRefinedValues-list"
      >
        
            
        
        
          
      </ul>
      
  
          
      
      
        
    </div>
    
  
        
    <ng-ais-footer
      ng-reflect-class-name="ais-CurrentRefinedValues-foote"
    >
      
      
      
      
    
    </ng-ais-footer>
    
      
  </div>
    
</ng-ais-current-refinements>
`;

exports[`CurrentRefinedValues should apply \`transformItems\` if specified 1`] = `
<ng-ais-current-refinements
  attributes={[Function Array]}
  clearAll={[Function String]}
  clearAllLabel={[Function String]}
  clearsQuery="false"
  cx={[Function Function]}
  onlyListedAttributes="false"
  searchInstance={[Function NgAisInstance]}
  state={[Function Object]}
  transformItems={[Function Function]}
  updateState={[Function Function]}
>
  
      <div
    class="ais-CurrentRefinedValues"
  >
    
        
    <ng-ais-header
      ng-reflect-class-name="ais-CurrentRefinedValues-heade"
    >
      
      
      
      
    
    </ng-ais-header>
    
  
        
    <div
      class="ais-CurrentRefinedValues-body ais-body"
    >
      
          
      
      <button
        class="ais-CurrentRefinedValues-reset"
      >
        
            Clear all
          
      </button>
      
  
          
      <ul
        class="ais-CurrentRefinedValues-list"
      >
        
            
        
        <li
          class="ais-CurrentRefinedValues-item"
        >
          
              
          <button
            class="ais-CurrentRefinedValues-button"
          >
            
                foo - Canon
                
            <span
              class="ais-CurrentRefinedValues-count"
            >
              27
            </span>
            
              
          </button>
          
            
        </li>
        <li
          class="ais-CurrentRefinedValues-item"
        >
          
              
          <button
            class="ais-CurrentRefinedValues-button"
          >
            
                foo - Sony
                
            <span
              class="ais-CurrentRefinedValues-count"
            >
              28
            </span>
            
              
          </button>
          
            
        </li>
        <li
          class="ais-CurrentRefinedValues-item"
        >
          
              
          <button
            class="ais-CurrentRefinedValues-button"
          >
            
                foo - Cameras & Camcorders
                
            <span
              class="ais-CurrentRefinedValues-count"
            >
              55
            </span>
            
              
          </button>
          
            
        </li>
        <li
          class="ais-CurrentRefinedValues-item"
        >
          
              
          <button
            class="ais-CurrentRefinedValues-button"
          >
            
                foo - ≥ 0
                
            <span
              class="ais-CurrentRefinedValues-count"
            >
              
            </span>
            
              
          </button>
          
            
        </li>
        
          
      </ul>
      
  
          
      
      
        
    </div>
    
  
        
    <ng-ais-footer
      ng-reflect-class-name="ais-CurrentRefinedValues-foote"
    >
      
      
      
      
    
    </ng-ais-footer>
    
      
  </div>
    
</ng-ais-current-refinements>
`;
